# CogniLink

./: .env.dev.example  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py
backend/app/core/: config.py  db.py
backend/app/crud/: object_permanence.py
backend/app/models/: object_permanence.py
backend/app/tools/: compare_images.py
backend/app/workflows/object_permanence/: prompts.py  state.py  workflow.py
backend/app/workflows/object_permanence/agents/: analyze_diff_frames.py  analyze_static_frame.py  check_frame_similarity.py  filter_results.py  save_analysis.py
backend/app/workflows/object_permanence/tools/: compare_images.py
server/: Dockerfile  pyproject.toml
