[project]
name = "server"
version = "0.1.0"
description = "Backend server for CogniLink"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "opencv-python-headless>=4.12.0.88",
    "pgvector>=0.4.2",
    "pillow>=12.0.0",
    "psycopg[binary,pool]>=3.3.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.29",
]
